--- a/MilkHuntsman/Base.lproj/Main.storyboard
+++ b/MilkHuntsman/Base.lproj/Main.storyboard
@@ -2015,18 +2015,18 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <view contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="d1b-QH-Lds">
-                                <rect key="frame" x="0.0" y="64" width="414" height="672"/>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="d1b-QH-Lds">
+                                <rect key="frame" x="0.0" y="20" width="414" height="716"/>
                                 <subviews>
-                                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" image="1-7.png" translatesAutoresizingMaskIntoConstraints="NO" id="zC2-Sd-GDp">
-                                        <rect key="frame" x="171" y="304" width="73" height="64"/>
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="1-7.png" translatesAutoresizingMaskIntoConstraints="NO" id="zC2-Sd-GDp">
+                                        <rect key="frame" x="171" y="326" width="73" height="64"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="64" id="aGU-dR-5KQ"/>
                                             <constraint firstAttribute="width" constant="73" id="cNM-Fg-SRb"/>
                                         </constraints>
                                     </imageView>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="您还没有任何评论哟" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9O4-dS-MHQ">
-                                        <rect key="frame" x="123" y="376" width="168" height="21"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="您还没有任何评论哟" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9O4-dS-MHQ">
+                                        <rect key="frame" x="123" y="398" width="168" height="21"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="21" id="5hr-ps-vFG"/>
                                             <constraint firstAttribute="width" constant="168" id="dyf-4A-kcG"/>
