--- a/MilkHuntsman/Base.lproj/Main.storyboard
+++ b/MilkHuntsman/Base.lproj/Main.storyboard
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9531" systemVersion="15D21" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="Ol2-36-bB9">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9532" systemVersion="15A284" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="Ol2-36-bB9">
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9529"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9530"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
@@ -2032,7 +2032,7 @@
                                             <constraint firstAttribute="width" constant="168" id="dyf-4A-kcG"/>
                                         </constraints>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                        <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                        <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                 </subviews>
@@ -2469,6 +2469,61 @@
             </objects>
             <point key="canvasLocation" x="2093" y="5805"/>
         </scene>
+        <!--scan(扫描)-->
+        <scene sceneID="MTV-mI-jsu">
+            <objects>
+                <viewController storyboardIdentifier="ScanViewController" id="NZR-Ek-FYf" customClass="ScanViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="PRS-yq-V1z"/>
+                        <viewControllerLayoutGuide type="bottom" id="WJA-hE-fol"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="8p0-lr-nAN">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="aVT-V9-6W4">
+                                <rect key="frame" x="107" y="268" width="200" height="200"/>
+                                <subviews>
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="qrcode_scanline_qrcode" translatesAutoresizingMaskIntoConstraints="NO" id="ye5-2J-FZC">
+                                        <rect key="frame" x="0.0" y="-170" width="200" height="170"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="170" id="5Ji-mX-mpT"/>
+                                        </constraints>
+                                    </imageView>
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="qrcode_border" translatesAutoresizingMaskIntoConstraints="NO" id="G2I-ze-QsQ">
+                                        <rect key="frame" x="0.0" y="0.0" width="200" height="200"/>
+                                    </imageView>
+                                </subviews>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstAttribute="bottom" secondItem="G2I-ze-QsQ" secondAttribute="bottom" id="7r5-Ud-Iq7"/>
+                                    <constraint firstAttribute="top" secondItem="ye5-2J-FZC" secondAttribute="top" constant="170" id="J0p-aR-Egm"/>
+                                    <constraint firstItem="G2I-ze-QsQ" firstAttribute="leading" secondItem="aVT-V9-6W4" secondAttribute="leading" id="J3N-BV-kaV"/>
+                                    <constraint firstAttribute="trailing" secondItem="ye5-2J-FZC" secondAttribute="trailing" id="ZPl-iP-VLJ"/>
+                                    <constraint firstAttribute="height" constant="200" id="ah3-bk-Yl4"/>
+                                    <constraint firstItem="G2I-ze-QsQ" firstAttribute="top" secondItem="aVT-V9-6W4" secondAttribute="top" id="iss-hp-jNr"/>
+                                    <constraint firstAttribute="width" constant="200" id="nc0-E4-Nai"/>
+                                    <constraint firstItem="ye5-2J-FZC" firstAttribute="leading" secondItem="aVT-V9-6W4" secondAttribute="leading" id="o1u-xj-Vgo"/>
+                                    <constraint firstAttribute="trailing" secondItem="G2I-ze-QsQ" secondAttribute="trailing" id="yVZ-hG-0Uz"/>
+                                </constraints>
+                            </view>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstAttribute="centerX" secondItem="aVT-V9-6W4" secondAttribute="centerX" id="MQw-1P-Z4d"/>
+                            <constraint firstAttribute="centerY" secondItem="aVT-V9-6W4" secondAttribute="centerY" id="NyX-MQ-gvv"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" title="scan(扫描)" id="Z70-V9-MBK"/>
+                    <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina55"/>
+                    <connections>
+                        <outlet property="scanTop1" destination="J0p-aR-Egm" id="Mwi-NX-Yl9"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="f39-v7-agK" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2330" y="692"/>
+        </scene>
     </scenes>
     <resources>
         <image name="1-7.png" width="48" height="48"/>
@@ -2479,6 +2534,8 @@
         <image name="Banned_sign.png" width="64" height="64"/>
         <image name="aaa.png" width="216" height="108"/>
         <image name="bill.png" width="26" height="26"/>
+        <image name="qrcode_border" width="50" height="50"/>
+        <image name="qrcode_scanline_qrcode" width="218" height="170"/>
         <image name="star2.png" width="26" height="26"/>
     </resources>
 </document>
